# swc-plugin-transform-vue3-jsx

./: .gitignore  .prettierrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  helpers.js  helpers.mjs  package.json  renovate.json  swc_plugin_transform_vue3_jsx.wasm
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
folder/: Cargo.toml
folder/src/: constants.rs  lib.rs  utils.rs  visitor.rs  visitor_helpers.rs
playground/: Cargo.toml  index.html  package.json  tsconfig.json  vite.config.ts
playground/pkg/: package.json  playground.d.ts  playground.js  playground_bg.wasm  playground_bg.wasm.d.ts
playground/src/: App.vue  _global.ts  lib.rs  main.ts  style.css  utils.rs
playground/src/components/: Editor.vue
playground/src/transform/: _babel_env_polyfill.ts  _babel_transform.ts  _babel_utils.ts  babel.ts  babel.worker.ts  swc.ts  swc.worker.ts  utils.ts
scripts/: build.js
src/: constants.rs  flags.rs  lib.rs  options.rs  test.rs  utils.rs  visitor.rs  visitor_helpers.rs
tests/: test.mjs
