[package]
author = "xxXyh1908"
edition = "2021"
name = "swc_plugin_transform_vue3_jsx"
version = "0.1.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
Inflector = "*"
globset = "^0.4.*"
lazy_static = "1.4.*"
linked-hash-map = "0.5.*"
regex = "^1.6.*"
serde = "1"
serde_json = "1"
swc_core = {version = "0.20.7", features = [
  "plugin_transform",
  "ecma_utils",
  "ecma_visit",
  "ecma_ast",
  "ecma_parser",
  "ecma_codegen",
  "ecma_quote",
  "common",
]}

[dev-dependencies]
testing = "0.29.4"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
