[package]
authors = ["xxXyh1908 <15626874924@163.com>"]
edition = "2021"
license = "MIT"
name = "swc_plugin_transform_vue3_jsx"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "swc_plugin_transform_vue3_jsx"

[workspace]
members = ["playground", "folder"]

[profile.release]
lto = true
opt-level = 2

[dependencies]
serde = "1"
serde_json = "1"
swc_core = {version = ">=0.22.0", features = [
  "plugin_transform",
  "ecma_visit",
  "ecma_ast",
  "common",
]}
vue3_jsx_folder = {path = "./folder"}

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
