[package]
author = "xxXyh1908"
edition = "2021"
name = "swc_plugin_transform_vue3_jsx_playground"
version = "0.1.0"
workspace = ".."

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
default = ["console_error_panic_hook"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = "1"
serde_json = "1"
swc_core = {version = "0.22.0", features = [
  "common",
  "base",
]}
wasm-bindgen = "0.2.82"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.7", optional = true}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = {version = "0.4.5", optional = true}

[dependencies.swc_plugin_transform_vue3_jsx]
path = ".."
version = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
