[package]
authors = ["xxXyh1908 <15626874924@163.com>"]
edition = "2021"
name = "playground"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
anyhow = "1.0.64"
lazy_static = "1.4.0"
serde = "1"
serde-wasm-bindgen = "0.4.3"
serde_json = "1"
swc = ">=0.226.0"
swc_core = {version = ">=0.22.0", features = [
  "ecma_utils",
  "ecma_visit",
  "ecma_ast",
  "ecma_parser",
  "ecma_codegen",
  "ecma_quote",
  "common",
  "base",
]}
swc_ecma_transforms_base = ">=0.108.0"
swc_ecma_transforms_typescript = ">=0.154.0"
vue3_jsx_folder = {path = "../folder"}
wasm-bindgen = "0.2.82"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.7", optional = true}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = {version = "0.4.5", optional = true}

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
opt-level = 2
